--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#footer">Home</a>
+              <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#pricing">About</a>
+              <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#cta">Blog</a>
+              <a class="nav-link" href="#">Blog</a>
           </li>
       </ul>
    </div>
@@ -62,7 +62,7 @@
     </div>
 
     <div class=" col-lg-6 ">
-      <img class="title-image title-container-height" src="Images/Code conflux logo.jpeg" alt="iphone-mockup">
+      <img class="title-image title-container-height" src="Images/Code conflux logo.jpeg" alt="logo">
     </div>
 
    
