--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#footer">Home</a>
+              <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#pricing">About</a>
+              <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#cta">Blog</a>
+              <a class="nav-link" href="#">Blog</a>
           </li>
+          <button type="button" class="btn btn-primary">Login/Sign Up</button>
       </ul>
    </div>
   </nav>
